--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  Absolute Path (external link)
+  <a href= "https://learn.co/tracks/online-software-engineering-structured">Absolute Path (external link)</a>  
+  
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
+  <a href= "blogs.html">Relative Path (internal link)</a>
+  
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg" target= "_blank">Dangerous Yawn</a> 
+  
 
 </body>
 </html>
